--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -2,6 +2,35 @@
     line-height: 28px;
     margin-bottom: 1.2rem;
 }
+#content h2,
+#content h3,
+#content h4 {
+    font-weight: bold;
+    color: #38b2ac!important;
+}
+#content h2 {
+    font-size: 1.8rem!important;
+    margin-bottom: .5rem;
+}
+#content h3 {
+    font-size: 1.4rem!important;
+    margin-bottom: .4rem;
+}
+#content img {
+    width: 30%;
+    height: 15rem;
+    background-size: cover;
+    object-fit: cover;
+    margin: 1rem auto;
+    margin-bottom: 1rem;
+}
+#content h4 {
+    font-size: 1.2rem!important;
+    margin-bottom: .4rem;
+}
+#content .text-green {
+    color: #38b2ac!important;
+}
 #header-title {
     cursor: pointer;
     transition: .2s;
@@ -26,4 +55,11 @@
 }
 .stories-card:hover {
     box-shadow: none;
+}
+
+@media (max-width: 768px) {
+    #content img {
+        width: 100%;
+        height: 17rem;
+    }
 }
