--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -18,7 +18,7 @@
 }
 #content img {
     width: 30%;
-    height: 15rem;
+    height: 20rem;
     background-size: cover;
     object-fit: cover;
     margin: 1rem auto;
@@ -30,6 +30,10 @@
 }
 #content .text-green {
     color: #38b2ac!important;
+}
+#content iframe {
+    height: 20rem;
+    margin-bottom: 2rem;
 }
 #header-title {
     cursor: pointer;
@@ -60,6 +64,6 @@
 @media (max-width: 768px) {
     #content img {
         width: 100%;
-        height: 17rem;
+        height: 21rem;
     }
 }
